# pharma-medinfo-voice

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pharma_personas.yaml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  routes.py  websocket.py
app/config/: __init__.py  config.yaml  loader.py
app/core/: __init__.py  connection_manager.py  server.py  voice_assistant.py
app/models/: __init__.py  schemas.py
app/processors/: __init__.py  compliance_gate_processor.py  logging_turn_analyzer.py  smart_interruption_processor.py  subtitle_sync_processor.py  text_filter_processor.py  tone_aware_processor.py  visual_hint_processor.py
app/services/: __init__.py  chatterbox_tts.py  conversation.py  graph_keywords.py  groq_llm_service.py  hybrid_emotion_detector.py  input_analyzer.py  insight_capture.py  llm_text_sentiment.py  msp_emotion_detector.py  rag.py  rag_routing.py  stt.py  tally_submission.py  tone_detector.py  tts.py
app/services/a2ui/: __init__.py  a2ui_generator.py  a2ui_rag_service.py  orchestrator.py  pharma_cards.py  semantic_selector.py  template_library.py
app/transports/: __init__.py  patched_fastapi_websocket.py
app/utils/: __init__.py  helpers.py  logging.py  validation.py
client/: index.html  package-lock.json  package.json  tsconfig.json
client/public/: config.js
client/src/: app.ts  style.css
client/src/components/: EmotionChart.ts  Loader.ts  TopicTimeline.ts
client/src/components/EmotionAnalysisWidget/: EmotionAnalysis.css  EmotionAnalysis.tsx  mount.tsx  types.ts
client/src/components/InsightsDashboard/: InsightsDashboard.tsx  mount.tsx  styles.css  types.ts
client/src/components/SynchronizedAnalysisWidget/: SynchronizedAnalysis.css  SynchronizedAnalysis.tsx  TopicFlowGraph.tsx  mount.tsx  topicExtraction.ts
client/src/components/a2ui/: A2UIRenderer.ts  a2ui-styles.css
client/src/config/: waveVisualization.ts
client/src/types/: a2ui.ts
data/dupixent/: hcp__adverse_reactions.txt  hcp__clinical_pharmacology.txt  hcp__clinical_studies.txt  hcp__contraindications.txt  hcp__dosage_and_administration.txt  hcp__dosage_forms_and_strengths.txt  hcp__how_supplied.txt  hcp__indications_and_usage.txt  hcp__use_in_specific_populations.txt  hcp__warnings_and_cautions.txt  label_meta.json  patient__information_for_patients.txt  patient__instructions_for_use.txt  patient__spl_patient_package_insert.txt
deploy/: .env.production.example  Caddyfile  README.md  bootstrap.sh
deploy/systemd/: synthio-backend.service  synthio-lightrag-hcp.service  synthio-lightrag-patient.service
scripts/: check_elevenlabs.py  ingest_dupixent.py  pronunciation_qa.py
tests/: __init__.py  conftest.py
tests/evals/: adversarial_callers.yaml  judge.py  questions.yaml  report.md  report_sim_results.md  results.json  run_eval.py  scores_dev_results.json  scores_dev_sim_results.json  sim_results.json  simulate.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_helpers.py  test_input_analyzer.py
